--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "short-video-maker",
-  "version": "1.3.4",
-  "description": "Creates short videos for TikTok, Instagram Reels, and YouTube Shorts using the Model Context Protocol (MCP) and a REST API.",
+  "name": "video-maker",
+  "version": "1.3.5",
+  "description": "Creates videos for YouTube, Instagram Reels, and TikTok using the Model Context Protocol (MCP) and a REST API.",
   "main": "index.js",
-  "bugs": "https://github.com/gyoridavid/short-video-maker/issues",
-  "homepage": "https://github.com/gyoridavid/short-video-maker",
+  "bugs": "https://github.com/NeftalyRT/video-maker/issues",
+  "homepage": "https://github.com/NeftalyRT/video-maker",
   "scripts": {
     "build": "rimraf dist && tsc --project tsconfig.build.json && vite build",
     "dev": "vite build --watch | node --watch -r ts-node/register src/index.ts ",
@@ -20,82 +20,83 @@
     "ui:preview": "vite preview"
   },
   "bin": {
-    "short-video-maker": "dist/index.js"
+    "video-maker": "dist/index.js"
   },
   "files": [
     "dist",
     "static"
   ],
   "keywords": [
+    "video creation",
     "shorts",
-    "mcp",
-    "model context protocol",
     "reels",
     "tiktok",
-    "youtube shorts",
     "youtube",
+    "youtube shorts",
     "short video",
-    "video creation",
     "instagram",
     "video",
     "generator",
     "remotion",
+    "mcp",
+    "model context protocol",
     "faceless video"
   ],
   "author": "David Gyori",
   "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@modelcontextprotocol/sdk": "^1.9.0",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
-    "@remotion/bundler": "^4.0.286",
-    "@remotion/cli": "^4.0.286",
-    "@remotion/google-fonts": "^4.0.286",
-    "@remotion/install-whisper-cpp": "^4.0.286",
-    "@remotion/renderer": "^4.0.286",
-    "@remotion/zod-types": "^4.0.286",
-    "@tanstack/react-query": "^5.18.0",
-    "@types/react-dom": "^19.1.3",
+    "@modelcontextprotocol/sdk": "^1.25.1",
+    "@mui/icons-material": "^5.18.0",
+    "@mui/material": "^5.18.0",
+    "@remotion/bundler": "^4.0.399",
+    "@remotion/cli": "^4.0.399",
+    "@remotion/google-fonts": "^4.0.399",
+    "@remotion/install-whisper-cpp": "^4.0.399",
+    "@remotion/renderer": "^4.0.399",
+    "@remotion/zod-types": "^4.0.399",
+    "@tanstack/react-query": "^5.90.16",
+    "@types/react-dom": "^19.2.3",
     "@types/react-router-dom": "^5.3.3",
-    "axios": "^1.9.0",
+    "axios": "^1.13.2",
     "content-type": "^1.0.5",
     "cuid": "^3.0.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.18.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
     "fluent-ffmpeg": "^2.1.3",
-    "fs-extra": "^11.3.0",
-    "kokoro-js": "^1.2.0",
-    "nock": "^14.0.3",
-    "pino": "^9.6.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.3",
-    "remotion": "^4.0.286",
-    "zod": "^3.24.2",
-    "zod-to-json-schema": "^3.24.5"
+    "fs-extra": "^11.3.3",
+    "kokoro-js": "^1.2.1",
+    "nock": "^14.0.10",
+    "pino": "^9.14.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0",
+    "remotion": "^4.0.399",
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.25.1"
   },
   "devDependencies": {
-    "@remotion/eslint-config-flat": "^4.0.286",
-    "@types/content-type": "^1.1.8",
-    "@types/express": "^4.17.21",
-    "@types/fluent-ffmpeg": "^2.1.27",
+    "@remotion/eslint-config-flat": "^4.0.399",
+    "@types/content-type": "^1.1.9",
+    "@types/express": "^4.17.25",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/fs-extra": "^11.0.4",
     "@types/nock": "^11.1.0",
-    "@types/node": "^22.14.0",
-    "@types/react": "^19.1.0",
-    "@vitejs/plugin-react": "^4.4.1",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^9.24.0",
-    "postcss": "^8.4.31",
-    "prettier": "^3.5.3",
-    "rimraf": "^6.0.1",
-    "tailwindcss": "^3.3.0",
+    "@types/node": "^22.19.3",
+    "@types/react": "^19.2.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.2",
+    "memfs": "^4.51.1",
+    "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
+    "rimraf": "^6.1.2",
+    "tailwindcss": "^3.4.19",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.4",
-    "vitest": "^3.1.1"
+    "typescript": "^5.9.3",
+    "vite": "^6.4.1",
+    "vitest": "^3.2.4"
   }
 }
